DS-2414 Fix scrollbar in attributes panel

--- a/src/attributes-panel/attributes-panel.less
+++ b/src/attributes-panel/attributes-panel.less
@@ -7,7 +7,6 @@
 .operation-attributes-panel {
   position: absolute;
   width: 250px;
-  height: 95vh !important;
   margin: 0;
   background: rgba(255, 255, 255, 0.8);
   right: 3px;
@@ -25,9 +24,7 @@
     position: static;
   }
 
-  // Extends
   .flex-content {
-    // BEWARE!
     display: flex;
     align-items: center;
 
